# Polinoms_Shirshov-Sobol-Yurlov

./: CMakeLists.txt  README.md  main_NEW.py  sln.bat
C++ сборка/: .gitignore  CMakeLists.txt  README.md  sln.bat  sln.bat_
C++ сборка/include/: HashTable1.h  HashTable2.h  NoSortedTable1.h  NoSortedTable2.h  Polinom.h  Postfix.h  SortedTable.h  TreeTable.h  stack.h
C++ сборка/samples/: sample_polinoms.cpp
C++ сборка/src/: HashTable1.cpp  HashTable2.cpp  NoSotrtedTable1.cpp  Polinom.cpp  Postfix.cpp  SortedTable.cpp  TreeTable.cpp
C++ сборка/src-dll/: CMakeLists.txt  Project.cpp  Project.h
C++ сборка/srcGuiMFC/: PolinomGuiMFC.aps  PolinomGuiMFC.cpp  PolinomGuiMFC.h  PolinomGuiMFC.rc  PolinomGuiMFCDlg.cpp  PolinomGuiMFCDlg.h  resource.h
C++ сборка/srcGuiQt/: PolinomMain.cpp  PolinomMain.h  PolinomMain.qrc  PolinomMain.ui  main.cpp
C++ сборка/test/: test_HT1.cpp  test_HT2.cpp  test_NST1.cpp  test_NST2.cpp  test_polinom.cpp  test_postfix.cpp  tets_TT.cpp  tetst_ST.cpp
html/: localfile1.html  localfile2.html  localfile3.html  localfile4.html  script.js  window.html
html/css/: txt.css
include/: HashTable1.h  HashTable2.h  NoSortedTable.h  NoSortedTable1.h  NoSortedTable2.h  Polinom.h  Postfix.h  Project.h  SortedTable.h  TreeTable.h  f_list.h  polinoms.cpp  polinoms.h  stack.h
samples/: sample_polinoms.cpp
src/: CMakeLists.txt  HashTable1.cpp  HashTable2.cpp  NoSortedTable2.cpp  NoSotrtedTable.cpp  NoSotrtedTable1.cpp  Polinom.cpp  Postfix.cpp  Project.cpp  SortedTable.cpp  TreeTable.cpp  f_list.cpp
test/: forward_lisr_test.cpp  test_HT1.cpp  test_HT2.cpp  test_NST1.cpp  test_NST2.cpp  test_polinom.cpp  test_postfix.cpp  tets_TT.cpp  tetst_ST.cpp
